--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,21 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: grid;
+  justify-content: center;
+}
+
+#root {
+  display: grid;
+  width: 800px;
+  justify-self: center;
+  align-self: center;
+  border: solid black 4px;
+  border-radius: 10px;
+  margin: 30px;
 }
 
 code {
